# pwasm

./: .gitignore  AGENTS.md  README.md  benchmark.py  benchmark_dispatch.py  benchmark_mquickjs.py  benchmark_numpy.py  milestones.md  mquickjs_snapshot.py  profile_mquickjs.py  pyproject.toml  qjs.py  spec.md
.github/workflows/: publish.yml  test.yml
benchmarks/: benchmark_wasm.py  detailed_profiling.py
demo/: index.html  pure_python_wasm-0.1.0-py3-none-any.whl
docs/: mquickjs-plan.md
examples/: fibonacci.py  mquickjs_benchmark.py  mquickjs_fibonacci.py  mquickjs_optimized.py
github/workflows/: test.yml
src/pure_python_wasm/: __init__.py  compiler.py  decoder.py  errors.py  executor.py  executor_numpy.py  opcodes.py  types.py
src/pwasm/: __init__.py  decoder.py  executor.py  opcodes.py  types.py
src/pwism/: __init__.py  decoder.py  executor.py  types.py
tests/: fibonacci.wasm  fibonacci.wat  test_basic.py  test_decoder.py  test_executor.py  test_mquickjs.py  test_qjs.py  test_spec.py
